# sopmq

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
client/cpp/: CMakeLists.txt
client/cpp/src/: authenticated_state.cpp  authenticated_state.h  authentication_state.cpp  authentication_state.h  cluster.cpp  cluster.h  cluster_builder.cpp  cluster_builder.h  cluster_connection.cpp  cluster_connection.h  cluster_endpoint.cpp  cluster_endpoint.h  connection_error.cpp  connection_error.h  isession_state.cpp  isession_state.h  session.cpp  session.h  session_callbacks.h  settings.cpp  settings.h  sopmq-client.cpp  sopmq-client.h  unauthenticated_state.cpp  unauthenticated_state.h
cmake/Modules/: FindLibCASSANDRA.cmake  FindLibCQL.cmake
docs/: Add Node.txt  Basic Operations.txt  Cassandra Storage.txt  Crossnode.txt  FailureDetector.ipynb  InWorldz Use Case.txt  Node Restart.txt  Ring.txt  Sample Sessions.txt
docs/api/: Doxyfile
messages/: AnswerChallengeMessage.proto  AuthAckMessage.proto  CMakeLists.txt  ChallengeResponseMessage.proto  ConsumeFromQueueMessage.proto  ConsumeResponseMessage.proto  GetChallengeMessage.proto  GossipMessage.proto  GossipNodeData.proto  Identifier.proto  NodeClock.proto  PostMessage.proto  PostResponseMessage.proto  ProxyPublishMessage.proto  ProxyPublishResponseMessage.proto  PublishMessage.proto  PublishResponseMessage.proto  RequestMessage.proto  StampMessage.proto  SubscribeQueueMessage.proto  SubscribeResponseMessage.proto  VectorClock.proto
messages/cpp/: message_types.h
node/: CMakeLists.txt
node/src/: cass_ptrs.h  cassandra_storage.cpp  cassandra_storage.h  cassandra_storage_async_helpers.cpp  cassandra_storage_async_helpers.h  comparison_error.cpp  comparison_error.h  connection.cpp  connection.h  connection_in.cpp  connection_in.h  connection_out.cpp  connection_out.h  csauthenticated.cpp  csauthenticated.h  csunauthenticated.cpp  csunauthenticated.h  endpoint.cpp  endpoint.h  failure_detector.cpp  failure_detector.h  gossiper.cpp  gossiper.h  iconnection_state.cpp  iconnection_state.h  inode_operations.cpp  inode_operations.h  local_node_operations.cpp  local_node_operations.h  message_dispatcher.cpp  message_dispatcher.h  message_not_found_error.cpp  message_not_found_error.h  message_ptrs.h  message_queue.cpp  message_queue.h  messageutil.cpp  messageutil.h  netutil.cpp  netutil.h  (+26 more)
shared/: CMakeLists.txt
shared/src/: connection_base.cpp  connection_base.h  endpoint.cpp  endpoint.h  id_conflict_error.cpp  id_conflict_error.h  logging.h  message_dispatcher.cpp  message_dispatcher.h  message_ptrs.h  messageutil.cpp  messageutil.h  movable_noncopyable.h  netutil.cpp  netutil.h  network_error.cpp  network_error.h  network_operation_result.cpp  network_operation_result.h  random_selector.h  range_conflict_error.cpp  range_conflict_error.h  responses.h  unavailable_error.cpp  unavailable_error.h  util.cpp  util.h
test/: CMakeLists.txt
test/src/: test-account.cpp  test-cluster-endpoint.cpp  test-endpoint.cpp  test-failuredetector.cpp  test-main.cpp  test-message_dispatcher.cpp  test-messagequeue.cpp  test-node.cpp  test-operations.cpp  test-ring.cpp  test-util.cpp
